crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_txid.rs
use contextdb_core::TxId;

fn main() {
    let x: u64 = 42;
    let _tx: TxId = x;
}
