crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_txid.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/assign_u64_to_txid.rs:5:21
  |
5 |     let _tx: TxId = x;
  |              ----   ^ expected `TxId`, found `u64`
  |              |
  |              expected due to this
  |
help: try wrapping the expression in `contextdb_core::TxId`
  |
5 |     let _tx: TxId = contextdb_core::TxId(x);
  |                     +++++++++++++++++++++ +
